spacing fixes on projects mobile

--- a/app/common.module.scss
+++ b/app/common.module.scss
@@ -88,7 +88,7 @@ $simpleGradient: linear-gradient(45deg, $secondaryColor, $accentColor, $primaryC
   letter-spacing: 2px;
 }
 
-.small-text {
+.content {
   font-family: "Neue Montreal Book", sans-serif;
   font-weight: 400;
 }
