--- a/app/fonts.css
+++ b/app/fonts.css
@@ -53,7 +53,7 @@
 }
 
 /* Neue Montreal Semibold */
-@font-face {
+/* @font-face {
   font-family: "Neue Montreal Semibold";
   src: url("../public/fonts/Neue Montreal Semibold.ttf") format("truetype");
-}
+} */
