--- a/utils/animations/scroll.module.scss
+++ b/utils/animations/scroll.module.scss
@@ -2,19 +2,15 @@
 .paragraph {
   display: flex;
   flex-wrap: wrap;
-  @extend .separated;
-  letter-spacing: 1.5px;
-  line-height: 0.5;
-  font-size: 4.5vw;
+  @extend .content;
+  font-size: 2.25vh;
   width: 90%;
   text-align: left;
   padding: 0% 5%;
 
   .word {
     position: relative;
-    margin-right: 12px;
-    margin-top: 12px;
-
+    margin: 0px 5px;
     .shadow {
       position: absolute;
       opacity: 20%;
